# movie-skill-openclaw

./: CLAUDE.md  INSTALL.md  README.md  pyproject.toml  skill-definition.md
docs/: IINA-全屏播放.md
movie_skill/: __init__.py  cli.py  engine.py
movie_skill/config/: __init__.py  loader.py  schema.py
movie_skill/downloader/: __init__.py  cli.py  queue.py  scanner.py  state.py  thunder.py
movie_skill/matchers/: __init__.py  bilingual.py  chinese.py
movie_skill/output/: __init__.py  json_writer.py  schema.py  terminal.py
movie_skill/parsers/: __init__.py  episode.py  magnet.py  resolution.py
movie_skill/player/: __init__.py  cli.py  player.py  scanner.py  state.py
movie_skill/sites/: __init__.py  base.py  clm34.py  dygod.py  factory.py  generic.py  registry.py  u3c3.py
movie_skill/skill/: __init__.py  cli.py  interactor.py  parser.py  pipeline.py
movie_skill/utils/: __init__.py  retry.py  user_agent.py
movie_skill/wizard/: __init__.py  configure.py
